test/fail/NoSuchModule.agda
module NoSuchModule where

open X
